--- a/app/styles/blocks/catalog.sass
+++ b/app/styles/blocks/catalog.sass
@@ -24,6 +24,14 @@
                 text: 18px
 
 .recommended
+    &__title
+        text: 400 24px 1.1
+        margin-bottom: 0
+
+    &__head
+        margin-bottom: 32px
+
+
     &__slider
         position: relative
         left: 50%
