--- a/app/styles/blocks/product-card.sass
+++ b/app/styles/blocks/product-card.sass
@@ -44,7 +44,7 @@
             cursor: pointer
             position: absolute
             width: 40px @xl 88px 
-            height: 100%
+            height: 480px
             background-size: contain
             background-position: center
             background-repeat: no-repeat
