--- a/dest/styles/app.css
+++ b/dest/styles/app.css
@@ -2041,7 +2041,7 @@ a.tag:active {
   cursor: pointer;
   position: absolute;
   width: 40px;
-  height: 100%;
+  height: 480px;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
