--- a/app/assets/views/p-card.pug
+++ b/app/assets/views/p-card.pug
@@ -355,137 +355,165 @@ block content
                         p Толщина корпуса
                         span 1.42см
 
-            .recommended.product-card__recommended
-                .recommended__head
-                    h2.recommended__title Вам также может понравиться
+            .product-card__also-like
+                h2 Вам также может понравиться
 
-                .slider-wrapper
-                    .recommended__slider
-                        .swiper-wrapper
-                            .product
-                                .product__body
-                                    a.product__link(href="p-card.html" title="Go to product")
+                div
+                    a.product-card__also-like--item(href="p-card.html")
+                        div
+                            img(alt="KidPhone 2" src="img/content/p-card/also-like/card_0.jpg")
 
-                                    .product__labels
-                                        .product__labels-item.-purple- Новинка
-                                        .product__labels-item.-green- Хит продаж
+                        p KidPhone 2
+                    
+                    a.product-card__also-like--item(href="p-card.html")
+                        div
+                            img(alt="KidPhone 2" src="img/content/p-card/also-like/card_1.png")
 
-                                    .product__img--wrap(style="background: #F0EEF7")
-                                        img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
+                        p Kidphone 4GR M
 
-                                        ul.product__colors-list
-                                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
+                    a.product-card__also-like--item(href="p-card.html")
+                        div
+                            img(alt="KidPhone 2" src="img/content/p-card/also-like/card_2.jpg")
 
-                                    .product__info
-                                        .product__title KidGram Watch
-                                        .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
-                                        .product__price.price
-                                            .price__current 7990 р
+                        p KidPhone 4G Lite
 
-                                        .product__nav
-                                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
+                    a.product-card__also-like--item(href="p-card.html")
+                        div
+                            img(alt="KidPhone 2" src="img/content/p-card/also-like/card_3.jpg")
+                            
+                        p GamePhone
 
-                            .product
-                                .product__body
-                                    a.product__link(href="p-card.html" title="Go to product")
+            //- .recommended.product-card__recommended
+            //-     .recommended__head
+            //-         h2.recommended__title Вам также может понравиться
 
-                                    .product__labels
-                                        .product__labels-item.-purple- Новинка
-                                        .product__labels-item.-green- Хит продаж
+            //-     .slider-wrapper
+            //-         .recommended__slider
+            //-             .swiper-wrapper
+            //-                 .product
+            //-                     .product__body
+            //-                         a.product__link(href="p-card.html" title="Go to product")
 
-                                    .product__img--wrap(style="background: #F0EEF7")
-                                        img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
+            //-                         .product__labels
+            //-                             .product__labels-item.-purple- Новинка
+            //-                             .product__labels-item.-green- Хит продаж
 
-                                        ul.product__colors-list
-                                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
+            //-                         .product__img--wrap(style="background: #F0EEF7")
+            //-                             img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
 
-                                    .product__info
-                                        .product__title KidGram Watch
-                                        .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
-                                        .product__price.price
-                                            .price__current 7990 р
+            //-                             ul.product__colors-list
+            //-                                 li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
 
-                                        .product__nav
-                                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
+            //-                         .product__info
+            //-                             .product__title KidGram Watch
+            //-                             .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
+            //-                             .product__price.price
+            //-                                 .price__current 7990 р
 
-                            .product
-                                .product__body
-                                    a.product__link(href="p-card.html" title="Go to product")
+            //-                             .product__nav
+            //-                                 button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
-                                    .product__labels
-                                        .product__labels-item.-purple- Новинка
-                                        .product__labels-item.-green- Хит продаж
+            //-                 .product
+            //-                     .product__body
+            //-                         a.product__link(href="p-card.html" title="Go to product")
 
-                                    .product__img--wrap(style="background: #F0EEF7")
-                                        img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
+            //-                         .product__labels
+            //-                             .product__labels-item.-purple- Новинка
+            //-                             .product__labels-item.-green- Хит продаж
 
-                                        ul.product__colors-list
-                                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
+            //-                         .product__img--wrap(style="background: #F0EEF7")
+            //-                             img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
 
-                                    .product__info
-                                        .product__title KidGram Watch
-                                        .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
-                                        .product__price.price
-                                            .price__current 7990 р
+            //-                             ul.product__colors-list
+            //-                                 li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
 
-                                        .product__nav
-                                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
+            //-                         .product__info
+            //-                             .product__title KidGram Watch
+            //-                             .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
+            //-                             .product__price.price
+            //-                                 .price__current 7990 р
 
-                            .product
-                                .product__body
-                                    a.product__link(href="p-card.html" title="Go to product")
+            //-                             .product__nav
+            //-                                 button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
-                                    .product__labels
-                                        .product__labels-item.-purple- Новинка
-                                        .product__labels-item.-green- Хит продаж
+            //-                 .product
+            //-                     .product__body
+            //-                         a.product__link(href="p-card.html" title="Go to product")
 
-                                    .product__img--wrap(style="background: #F0EEF7")
-                                        img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
+            //-                         .product__labels
+            //-                             .product__labels-item.-purple- Новинка
+            //-                             .product__labels-item.-green- Хит продаж
 
-                                        ul.product__colors-list
-                                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
+            //-                         .product__img--wrap(style="background: #F0EEF7")
+            //-                             img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
 
-                                    .product__info
-                                        .product__title KidGram Watch
-                                        .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
-                                        .product__price.price
-                                            .price__current 7990 р
+            //-                             ul.product__colors-list
+            //-                                 li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
 
-                                        .product__nav
-                                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
+            //-                         .product__info
+            //-                             .product__title KidGram Watch
+            //-                             .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
+            //-                             .product__price.price
+            //-                                 .price__current 7990 р
 
-                            .product
-                                .product__body
-                                    a.product__link(href="p-card.html" title="Go to product")
+            //-                             .product__nav
+            //-                                 button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
-                                    .product__labels
-                                        .product__labels-item.-purple- Новинка
-                                        .product__labels-item.-green- Хит продаж
+            //-                 .product
+            //-                     .product__body
+            //-                         a.product__link(href="p-card.html" title="Go to product")
 
-                                    .product__img--wrap(style="background: #F0EEF7")
-                                        img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
+            //-                         .product__labels
+            //-                             .product__labels-item.-purple- Новинка
+            //-                             .product__labels-item.-green- Хит продаж
 
-                                        ul.product__colors-list
-                                            li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
-                                            li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
+            //-                         .product__img--wrap(style="background: #F0EEF7")
+            //-                             img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
 
-                                    .product__info
-                                        .product__title KidGram Watch
-                                        .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
-                                        .product__price.price
-                                            .price__current 7990 р
+            //-                             ul.product__colors-list
+            //-                                 li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
 
-                                        .product__nav
-                                            button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
+            //-                         .product__info
+            //-                             .product__title KidGram Watch
+            //-                             .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
+            //-                             .product__price.price
+            //-                                 .price__current 7990 р
+
+            //-                             .product__nav
+            //-                                 button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
+
+            //-                 .product
+            //-                     .product__body
+            //-                         a.product__link(href="p-card.html" title="Go to product")
+
+            //-                         .product__labels
+            //-                             .product__labels-item.-purple- Новинка
+            //-                             .product__labels-item.-green- Хит продаж
+
+            //-                         .product__img--wrap(style="background: #F0EEF7")
+            //-                             img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
+
+            //-                             ul.product__colors-list
+            //-                                 li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
+            //-                                 li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
+
+            //-                         .product__info
+            //-                             .product__title KidGram Watch
+            //-                             .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
+            //-                             .product__price.price
+            //-                                 .price__current 7990 р
+
+            //-                             .product__nav
+            //-                                 button.btn.btn--border-accent.product__btn(aria-label="Add cart") Добавить в корзину
 
                     
 
