--- a/app/styles/blocks/product-card.sass
+++ b/app/styles/blocks/product-card.sass
@@ -11,7 +11,7 @@
         padding: @lg 0px 64px
         height: @lg 940px
         background: @lg linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(226, 229, 237, 0.5) 100%)
-        padding-top: 100% @lg 0
+        aspect-ratio: @lg-down 1 / 1.3
 
     &__swiper-main
         position: @lg-down absolute
@@ -37,6 +37,7 @@
                 max-width: 600px
                 max-height: 600px
                 height: 100%
+                object-fit: @lg-down cover
 
         .button-prev,
         .button-next
