--- a/dest/styles/app.css
+++ b/dest/styles/app.css
@@ -1009,6 +1009,102 @@ a.tag:active {
   margin-right: 0;
 }
 
+body .popup-window.popup-window-with-titlebar {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  border-radius: 24px;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-close-icon {
+  top: 15px;
+  right: 15px;
+  opacity: .5 !important;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-close-icon:after {
+  width: 20px;
+  height: 20px;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='10' height='10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.666.621a.5.5 0 00-.707 0L5.002 3.58 2.044.62a.5.5 0 00-.707 0l-.714.714a.5.5 0 000 .707L3.581 5 .623 7.957a.5.5 0 000 .708l.714.713a.5.5 0 00.707 0L5.002 6.42l2.957 2.958a.5.5 0 00.708 0l.713-.714a.5.5 0 000-.707L6.422 5 9.38 2.042a.5.5 0 000-.707L8.666.62z' fill='%23828b95'/%3E%3C/svg%3E");
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-close-icon:hover {
+  opacity: 1 !important;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-titlebar {
+  order: 2;
+  height: auto;
+  margin-bottom: 16px;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-titlebar-text {
+  color: #222222;
+  display: block;
+  width: 67%;
+  margin: 0 auto 0;
+  overflow: visible;
+  text-wrap: wrap;
+  font-size: 26px !important;
+  font-weight: 400 !important;
+  line-height: 32px;
+  text-align: center;
+  padding: 0 10px;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-content {
+  order: 1;
+  margin-bottom: 20px;
+  padding-top: 32px;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-content img {
+  margin: 0 auto;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-content p {
+  display: none;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-buttons {
+  order: 3;
+  padding: 0;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-buttons .btn:first-child {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: #3B3B4D;
+  border: 1px solid #3B3B4D;
+  color: #fff;
+  outline: none;
+  height: 56px;
+  font-size: 16px;
+  border-radius: 12px;
+  padding: 5px 10px;
+}
+
+body .popup-window.popup-window-with-titlebar .popup-window-buttons .btn:last-child {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #fff;
+  color: #3B3B4D;
+  outline: none;
+  height: 56px;
+  font-size: 16px;
+  border-radius: 12px;
+  padding: 5px 10px;
+}
+
 .header {
   position: sticky;
   top: 0;
@@ -1963,6 +2059,9 @@ a.tag:active {
   flex: 1;
 }
 
+.catalog .product__colors-list {
+}
+
 .catalog .product__btn {
   width: 100%;
 }
@@ -2009,7 +2108,6 @@ a.tag:active {
 
 .product-card__container {
   position: relative;
-  padding-top: 100%;
 }
 
 .product-card__swiper-main {
@@ -3413,7 +3511,6 @@ a.tag:active {
     padding: 0px 64px;
     height: 940px;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(226, 229, 237, 0.5) 100%);
-    padding-top: 0;
   }
 
   .product-card__swiper-main.swiper {
@@ -4129,6 +4226,12 @@ a.tag:active {
   }
 }
 
+@media (max-width: 370px) {
+  .catalog .product__btn {
+    font-size: 11px;
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .product-card__swiper-main .swiper-slide img {
     top: 50%;
@@ -4329,10 +4432,18 @@ a.tag:active {
     background: #fff;
   }
 
+  .product-card__container {
+    aspect-ratio: 1/1.3;
+  }
+
   .product-card__swiper-main {
     position: absolute;
     top: 0;
     left: 0;
+  }
+
+  .product-card__swiper-main .swiper-slide img {
+    object-fit: cover;
   }
 
   .product-card__swiper-main .button-next,.product-card__swiper-main .button-prev {
@@ -4409,6 +4520,11 @@ a.tag:active {
 @media (max-width: 579px) {
   .hide-sm-down {
     display: none;
+  }
+
+  .catalog .product__colors-list {
+    position: relative;
+    bottom: -8px;
   }
 
   .footer__nav--another ul li a {
