styles for popup-window

--- a/app/assets/views/catalog.pug
+++ b/app/assets/views/catalog.pug
@@ -27,7 +27,8 @@ block content
                         .product__labels-item.-green- Хит продаж
 
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
+                        a(href="p-card.html" title="Go to product")
+                            img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
                             li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
@@ -48,7 +49,8 @@ block content
                     a.product__link(href="p-card.html" title="Go to product")
 
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/catalog/product_1.png" width="213" height="213" alt="Name product")
+                        a(href="p-card.html" title="Go to product")
+                            img.product__img(src="img/content/catalog/product_1.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
                             li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/yellow.jpg');")
@@ -72,7 +74,8 @@ block content
                         .product__labels-item.-purple- Новинка
 
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/catalog/product_2.png" width="213" height="213" alt="Name product")
+                        a(href="p-card.html" title="Go to product")
+                            img.product__img(src="img/content/catalog/product_2.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
                             li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
@@ -96,7 +99,8 @@ block content
                         .product__labels-item.-green- Хит продаж
 
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/catalog/product_3.png" width="213" height="213" alt="Name product")
+                        a(href="p-card.html" title="Go to product")
+                            img.product__img(src="img/content/catalog/product_3.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
                             li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
@@ -120,7 +124,8 @@ block content
                         .product__labels-item.-blue- Рекомендуем
 
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/catalog/product_4.png" width="213" height="213" alt="Name product")
+                        a(href="p-card.html" title="Go to product")
+                            img.product__img(src="img/content/catalog/product_4.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
                             li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
@@ -143,7 +148,8 @@ block content
                         .product__labels-item.-purple- Новинка
 
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/catalog/product_5.png" width="213" height="213" alt="Name product")
+                        a(href="p-card.html" title="Go to product")
+                            img.product__img(src="img/content/catalog/product_5.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
                             li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
@@ -168,7 +174,8 @@ block content
                         .product__labels-item.-green- Хит продаж
 
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/catalog/product_6.png" width="213" height="213" alt="Name product")
+                        a(href="p-card.html" title="Go to product")
+                            img.product__img(src="img/content/catalog/product_6.png" width="213" height="213" alt="Name product")
 
                     .product__info
                         .product__title KidPhone 4GR
@@ -182,7 +189,8 @@ block content
                     a.product__link(href="p-card.html" title="Go to product")
 
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/catalog/product_7.png" width="213" height="213" alt="Name product")
+                        a(href="p-card.html" title="Go to product")
+                            img.product__img(src="img/content/catalog/product_7.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
                             li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/black.jpg');")
@@ -203,7 +211,8 @@ block content
                     a.product__link(href="p-card.html" title="Go to product")
 
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/catalog/product_8.webp" width="213" height="213" alt="Name product")
+                        a(href="p-card.html" title="Go to product")
+                            img.product__img(src="img/content/catalog/product_8.webp" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
                             li.product__colors-item.product__colors-item--active(style="background-image: url('img/content/product-colors/pink-black.jpg');")
