styles for popup-window

--- a/app/styles/inc/popups.sass
+++ b/app/styles/inc/popups.sass
@@ -24,6 +24,7 @@ body
             margin-bottom: 16px
 
             &-text
+                font-family: "Gilroy"
                 color: #222222
                 display: block
                 width: 67%
@@ -54,6 +55,8 @@ body
             flex-direction: column-reverse
 
             .btn
+                font-family: "Gilroy"
+
                 &:first-child
                     cursor: pointer
                     display: flex  
